# cptool

./: .gitignore  .gitmodules  Cargo.toml  README.md
example/a_plus_b/: gen.cpp  problem.yaml  std.cpp  val.cpp
example/sum/: gen.cpp  problem.yaml  std.cpp  val.cpp
src/: core.rs  error.rs  export.rs  lib.rs  main.rs  problem.rs  program.rs  utils.rs
src/config/: problem.rs  program.rs
src/config/problem/: test.rs
src/core/: problem.rs  program.rs
src/core/problem/: test.rs
src/export/: syzoj.rs
src/problem/: builtin_problem.rs  builtin_program.rs  test.rs
